--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.4.0",
     "react-loadingg": "^1.7.2",
     "react-modal": "^3.15.1",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-scroll": "1.8.1",
