--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "8.1.2",
     "formik": "^2.2.9",
     "html-react-parser": "^3.0.4",
+    "jodit-react": "^1.3.39",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "postcss": "^8.4.18",
@@ -40,6 +41,7 @@
     "react-share": "4.4.0",
     "react-slick": "^0.29.0",
     "react-spinners-css": "1.2.2",
+    "react-to-print": "^2.14.12",
     "react-toast-notifications": "^2.5.1",
     "react-typed": "^1.2.0",
     "reactstrap": "^9.1.4",
