--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://www.touron.in/",
+  "homepage": "https://www.codeficorp.in/",
   "private": true,
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "24.0.0",
